--- a/style.css
+++ b/style.css
@@ -22,6 +22,8 @@ header, main, footer {
 
 header h1 {
   font-size: 2.5rem;
+  letter-spacing: 0.05em;
+  line-height: 1.2;
   color: #00bfff;
   margin-bottom: 0.5rem;
 }
@@ -32,15 +34,21 @@ header h1 {
   margin-bottom: 2rem;
 }
 
+.intro {
+    text-align: center;
+}
+
 .intro h2 {
   color: #46c9e5;
   margin-bottom: 0.5rem;
+  font-size: 1.3rem;
 }
 
 .intro p {
   margin-bottom: 2rem;
   font-size: 1.1rem;
   color: #e0e0e0;
+  line-height: 1.7;
 }
 
 footer {
